--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="image">
-          <img src="assets/profile.png" alt="profile" />
+          <img src="assets/fondo.png" alt="profile" />
         </div>
       </div>
     </section>
